# wapiti_swagger

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: main.yml
tests/: conftest.py  test_broken_file.py  test_complex.py  test_components.py  test_global_parameters.py  test_library.py  test_metadata.py  test_request_body.py
wapiti_swagger/: models.py  parser.py
