[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wapiti-swagger"
version = "0.1.0"
description = "A library for parsing and generating request bodies from Swagger/OpenAPI specifications."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Nicolas Surribas", email="nicolas.surribas@gmail.com"}
]
keywords = ["swagger", "openapi", "wapiti", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["PyYAML>=6.0"]  # Add any other required dependencies here
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["wapiti_swagger"]

